--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.17.1",
+    "pingmydyno": "^1.5.1",
     "slackbots": "^1.1.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tdotmdot00/jokebot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tdotmdot00/jokebot/issues"
+  },
+  "homepage": "https://github.com/tdotmdot00/jokebot#readme"
 }
