--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "nodemon index.js"
   },
-  "author": "Brad Traversy",
+  "author": "Trevor McCord",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
@@ -22,8 +22,4 @@
     "type": "git",
     "url": "git+https://github.com/tdotmdot00/jokebot.git"
   },
-  "bugs": {
-    "url": "https://github.com/tdotmdot00/jokebot/issues"
-  },
-  "homepage": "https://github.com/tdotmdot00/jokebot#readme"
-}
+  
